--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.squareup.retrofit:retrofit:1.4.1'
     compile 'com.squareup.okhttp:okhttp:1.5.2'
-
-
-
+    compile 'com.android.support:support-v4:23.1.0'
 }
